; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-utils.c_tl_string_buffer_append_cstr.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-utils.c_tl_string_buffer_append_cstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_buffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tl_string_buffer_append_cstr(%struct.tl_buffer* %0, i8* %1) #0 {
  %3 = alloca %struct.tl_buffer*, align 8
  %4 = alloca i8*, align 8
  store %struct.tl_buffer* %0, %struct.tl_buffer** %3, align 8
  store i8* %1, i8** %4, align 8
  br label %5

5:                                                ; preds = %9, %2
  %6 = load i8*, i8** %4, align 8
  %7 = load i8, i8* %6, align 1
  %8 = icmp ne i8 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %5
  %10 = load %struct.tl_buffer*, %struct.tl_buffer** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i8, i8* %11, align 1
  %13 = call i32 @tl_string_buffer_append_char(%struct.tl_buffer* %10, i8 signext %12)
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds i8, i8* %14, i32 1
  store i8* %15, i8** %4, align 8
  br label %5

16:                                               ; preds = %5
  ret void
}

declare dso_local i32 @tl_string_buffer_append_char(%struct.tl_buffer*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
